# cphysic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-cd.yml
includes/: config.hpp  object.hpp
includes/math/: geometry.hpp  matrices.hpp  quaternions.hpp  vectors.hpp
includes/physic/: engine.hpp  force.hpp  object.hpp
sources/math/: geometry.cpp  matrices.cpp  quaternions.cpp  vectors.cpp
sources/physic/: engine.cpp  object.cpp
tests/: CMakeLists.txt  test_collision.cpp  test_collision_2.cpp  test_matrix.cpp  test_quat4.cpp  test_vec3.cpp
tests/geometry/: box_collision.cpp  sphere_box_collision.cpp
tests/math/: matrix_op.cpp  matrix_quaternion_conv.cpp  vec3_op.cpp  vec4_op.cpp
tests/physic/: parallel_axis_theorem.cpp  singleton_linear_motion.cpp
